hphp/hack/test/typecheck/constraints/constraint_override_bad2.php.legacy.exp
File "constraint_override_bad2.php", line 19, characters 7-7:
Class C does not correctly implement all required members  (Typing[4110])
  File "constraint_override_bad2.php", line 19, characters 17-17:
  Some members are incompatible with those declared in type B
Read the following to see why:
  File "constraint_override_bad2.php", line 20, characters 19-21:
  Member foo has the wrong type
  File "constraint_override_bad2.php", line 20, characters 28-28:
  This is an object of type C
  File "constraint_override_bad2.php", line 20, characters 23-23:
  It is incompatible with a value of generic type T
